crates/aiken-lang/src/parser/expr/snapshots/parse_bare_parenthesized_assignment.snap
---
source: crates/aiken-lang/src/parser/expr/block.rs
description: "Invalid code (parse error):\n\n(x = 1)"
---
I found an unexpected token '='.
