crates/aiken-lang/src/parser/expr/snapshots/parse_bytearray.snap
---
source: crates/aiken-lang/src/parser/expr/tuple.rs
description: "Code:\n\n(#\"abcd\")"
---
ByteArray {
    location: 1..8,
    bytes: [
        (
            171,
            0..0,
        ),
        (
            205,
            0..0,
        ),
    ],
    preferred_format: HexadecimalString,
}
