crates/aiken-lang/src/parser/expr/snapshots/parse_nested_grouping.snap
---
source: crates/aiken-lang/src/parser/expr/block.rs
description: "Code:\n\n((x))"
---
Var {
    location: 2..3,
    name: "x",
}
