crates/aiken-lang/src/parser/expr/snapshots/parse_nested_tuple.snap
---
source: crates/aiken-lang/src/parser/expr/tuple.rs
description: "Code:\n\n((x, y))"
---
Tuple {
    location: 1..7,
    elems: [
        Var {
            location: 2..3,
            name: "x",
        },
        Var {
            location: 5..6,
            name: "y",
        },
    ],
}
