crates/aiken-lang/src/parser/expr/snapshots/parse_simple_grouping.snap
---
source: crates/aiken-lang/src/parser/expr/block.rs
description: "Code:\n\n(x)"
---
Var {
    location: 1..2,
    name: "x",
}
