crates/aiken-lang/src/parser/expr/snapshots/parse_simple_tuple.snap
---
source: crates/aiken-lang/src/parser/expr/tuple.rs
description: "Code:\n\n(x, y)"
---
Tuple {
    location: 0..6,
    elems: [
        Var {
            location: 1..2,
            name: "x",
        },
        Var {
            location: 4..5,
            name: "y",
        },
    ],
}
