crates/aiken-lang/src/parser/expr/snapshots/parse_singleton_tuple.snap
---
source: crates/aiken-lang/src/parser/expr/tuple.rs
description: "Invalid code (parse error):\n\n(x,)"
---
I found an unexpected token ')'.
